--- a/CODIGO/css/offcanvas.css
+++ b/CODIGO/css/offcanvas.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     border-radius: 20px;
     padding: 10px;
-    margin: 10px;
+    margin-top: 30px;
     max-width: 800%;
     max-height: 10%;
     justify-content: center;
@@ -25,6 +25,7 @@ body {
     max-height: 1000px;
     box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.5); 
     border-radius: 15%;
+    margin-top: 40px;
 }
 
 /* Offcanvas */
